--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -8,8 +8,7 @@
 <body>
 <h4> Изменение данных пользователя   </h4>
 <!-- создает форму для обновления информации о персоне -->
-<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
-
+<form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
     <!-- поле для ввода имени персоны -->
     <label for="name">Введите имя</label>
     <input type="text" th:field="*{name}" id="name"/>
