--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h4> Создание пользователя  </h4>
-<form th:method="POST" th:action="@{/}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin}" th:object="${user}">
 
 
     <label for="name">Введите имя</label>
