--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -39,10 +39,10 @@
 
 </table>
 <!-- создает ссылку на страницу редактирования персоны, используя идентификатор персоны -->
-<a th:href="@{/{id}/edit(id=${user.getId()})}">Изменить</a>
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Изменить</a>
 
 <!-- создает форму для отправки запроса на удаление персоны с указанным идентификатором -->
-<form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">
+<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
     <input type="submit" value="Удалить"/>
 </form>
 
